[package]
name = "wordle-markov-simulation-smarter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.7.6"
rayon = "1.5.1"
indicatif = {version = "0.16.2", features = ["rayon"]}

[[bin]]
name = "wordle-markov-simulation-smarter"
path = "main.rs"
